--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name" required>
+		
+		<label for="email">Email</label>
+		<input type="Email" id="email" placeholder="Email" required>
+		
+		<label for="gender">Gender</label>
+		<input type="radio" id="gender_m" name="gender" required>
+		<input type="radio" id="gender_f" name="gender" required>
+
+		<label for="select">Car Brands</label>
+		<select id="cars" type="select" placeholder="--Please choose an option--" required>
+			<option>Thar</option>
+			<option>Mahendra car</option>
+			<option>scorpio</option>
+		</select>
+		
+		<label for="age">Age</label>
+		<input type="number" id="age" placeholder="Age" required>
+		
+		<label for="dob">DOB</label>
+		<input type="date" id="dob" required>
+		
+		<label for="phone">Phone Number</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
+		
+		<label for="password">Password</label>
+		<input type="password" id="password" placeholder="password" required>
+
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" id="tos" required>
+
+		<input type="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
