--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="radio" id="gender_m" name="gender" required>
 		<input type="radio" id="gender_f" name="gender" required>
 
-		<label for="select">Car Brands</label>
+		<label for="car">Car Brands</label>
 		<select id="cars" type="select" placeholder="--Please choose an option--" required>
 			<option>Thar</option>
 			<option>Mahendra car</option>
@@ -32,7 +32,7 @@
 		<label for="dob">DOB</label>
 		<input type="date" id="dob" required>
 		
-		<label for="phone">Phone Number</label>
+		<label for="tel">Phone Number</label>
 		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
 		
 		<label for="password">Password</label>
@@ -41,8 +41,8 @@
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos" required>
 
-		<input type="submit">
-	</form>
+		<button type="submit">submit</button>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
