--- a/main.html
+++ b/main.html
@@ -20,10 +20,11 @@
 		<input type="radio" id="gender_f" name="gender" required>
 
 		<label for="car">Car Brands</label>
-		<select id="cars" type="select" placeholder="--Please choose an option--" required>
-			<option>Thar</option>
-			<option>Mahendra car</option>
-			<option>scorpio</option>
+		<select id="cars" name="cars" required>
+			<option value="">--Please choose an option-- "</option>
+			<option value="Thar">Thar</option>
+			<option value=">Mahendra car">Mahendra car</option>
+			<option value="scorpio">scorpio</option>
 		</select>
 		
 		<label for="age">Age</label>
