--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="radio" id="gender_m" name="gender" required>
 		<input type="radio" id="gender_f" name="gender" required>
 
-		<label for="car">Car Brands</label>
+		<label for="cars">Car Brands</label>
 		<select id="cars" name="cars" required>
 			<option value="">--Please choose an option-- "</option>
 			<option value="Thar">Thar</option>
